# SabakaOS

./: CMakeLists.txt  LICENSE.md  README.md  TODOFILE.md  linker.ld
boot/: boot.asm
graphics/: font.cpp  font.h  gfx.cpp  gfx.h  gfx_types.h  painter.cpp  painter.h  surface.cpp  surface.h
grub/: grub.cfg
kernel/: ata.cpp  ata.h  context_switch.asm  dns.cpp  dns.h  elf_loader.cpp  elf_loader.h  env_vars.cpp  env_vars.h  fat32.cpp  fat32.h  fb.cpp  fb.h  gdt.cpp  gdt.h  gdt_flush.asm  graphics.cpp  graphics.h  heap.cpp  heap.h  idt.cpp  idt.h  idt_flush.asm  isr.asm  isr128.asm  kernel.cpp  keyboard.cpp  keyboard.h  kstring.cpp  kstring.h  mouse.cpp  mouse.h  multiboot.h  mutex.cpp  mutex.h  net.cpp  net.h  net_queue.cpp  net_queue.h  osmath.cpp  (+43 more)
kernel/usb/: hid.cpp  hid.h  uhci.cpp  uhci.h
